--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    <script
+      src="https://kit.fontawesome.com/515e3d5724.js"
       crossorigin="anonymous"
-    />
+    ></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
